# comexio-http

./: LICENSE  README.md  main.py  setup.cfg
src/: main.py
src/comexio-http/: __init__.py  auth.py  marker.py  onewire.py  tag.py
src/comexio_http/: auth.py  io.py  tag.py
