[metadata]
name = comexio-http
version = 0.0.2
author = Sander Deryckere
description = Library to read and write variables on a Comexio server over their HTTP API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sanderd17/comexio-http
project_urls =
    Bug Tracker = https://github.com/sanderd17/comexio-http/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src